packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormValue<'_>` is not satisfied
 --> $DIR/from_form_type_errors.rs:7:5
  |
7 |     field: Unknown,
  |     ^^^^^^^^^^^^^^ the trait `FromFormValue<'_>` is not implemented for `Unknown`
  |
  = note: required by `from_form_value`

error[E0277]: the trait bound `Foo<usize>: FromFormValue<'_>` is not satisfied
  --> $DIR/from_form_type_errors.rs:15:5
   |
15 |     field: Foo<usize>,
   |     ^^^^^^^^^^^^^^^^^ the trait `FromFormValue<'_>` is not implemented for `Foo<usize>`
   |
   = note: required by `from_form_value`
