packages/rocket/rocket-0.4.10/core/codegen/tests/ui-fail/from_form_type_errors.rs
#[macro_use] extern crate rocket;

struct Unknown;

#[derive(FromForm)]
struct BadType3 {
    field: Unknown,
    //~^ rocket::request::FromFormValue
}

struct Foo<T>(T);

#[derive(FromForm)]
struct Other {
    field: Foo<usize>,
    //~^ rocket::request::FromFormValue
}

fn main() {  }
